Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/zzzz_in_arbeit/pp/gstquery.pp


function gst_query_new_custom(_type:TGstQueryType; structure:PGstStructure):PGstQuery;cdecl;external;
(* Const before type ignored *)
function gst_query_get_structure(query:PGstQuery):PGstStructure;cdecl;external;
function gst_query_writable_structure(query:PGstQuery):PGstStructure;cdecl;external;
{ position query  }
function gst_query_new_position(format:TGstFormat):PGstQuery;cdecl;external;
procedure gst_query_set_position(query:PGstQuery; format:TGstFormat; cur:Tgint64);cdecl;external;
procedure gst_query_parse_position(query:PGstQuery; format:PGstFormat; cur:Pgint64);cdecl;external;
{ duration query  }
function gst_query_new_duration(format:TGstFormat):PGstQuery;cdecl;external;
procedure gst_query_set_duration(query:PGstQuery; format:TGstFormat; duration:Tgint64);cdecl;external;
procedure gst_query_parse_duration(query:PGstQuery; format:PGstFormat; duration:Pgint64);cdecl;external;
{ latency query  }
function gst_query_new_latency:PGstQuery;cdecl;external;
procedure gst_query_set_latency(query:PGstQuery; live:Tgboolean; min_latency:TGstClockTime; max_latency:TGstClockTime);cdecl;external;
procedure gst_query_parse_latency(query:PGstQuery; live:Pgboolean; min_latency:PGstClockTime; max_latency:PGstClockTime);cdecl;external;
{ convert query  }
function gst_query_new_convert(src_format:TGstFormat; value:Tgint64; dest_format:TGstFormat):PGstQuery;cdecl;external;
procedure gst_query_set_convert(query:PGstQuery; src_format:TGstFormat; src_value:Tgint64; dest_format:TGstFormat; dest_value:Tgint64);cdecl;external;
procedure gst_query_parse_convert(query:PGstQuery; src_format:PGstFormat; src_value:Pgint64; dest_format:PGstFormat; dest_value:Pgint64);cdecl;external;
{ segment query  }
function gst_query_new_segment(format:TGstFormat):PGstQuery;cdecl;external;
procedure gst_query_set_segment(query:PGstQuery; rate:Tgdouble; format:TGstFormat; start_value:Tgint64; stop_value:Tgint64);cdecl;external;
procedure gst_query_parse_segment(query:PGstQuery; rate:Pgdouble; format:PGstFormat; start_value:Pgint64; stop_value:Pgint64);cdecl;external;
{ seeking query  }
function gst_query_new_seeking(format:TGstFormat):PGstQuery;cdecl;external;
procedure gst_query_set_seeking(query:PGstQuery; format:TGstFormat; seekable:Tgboolean; segment_start:Tgint64; segment_end:Tgint64);cdecl;external;
procedure gst_query_parse_seeking(query:PGstQuery; format:PGstFormat; seekable:Pgboolean; segment_start:Pgint64; segment_end:Pgint64);cdecl;external;
{ formats query  }
function gst_query_new_formats:PGstQuery;cdecl;external;
procedure gst_query_set_formats(query:PGstQuery; n_formats:Tgint; args:array of const);cdecl;external;
procedure gst_query_set_formats(query:PGstQuery; n_formats:Tgint);cdecl;external;
(* Const before type ignored *)
procedure gst_query_set_formatsv(query:PGstQuery; n_formats:Tgint; formats:PGstFormat);cdecl;external;
procedure gst_query_parse_n_formats(query:PGstQuery; n_formats:Pguint);cdecl;external;
procedure gst_query_parse_nth_format(query:PGstQuery; nth:Tguint; format:PGstFormat);cdecl;external;
{ buffering query  }
function gst_query_new_buffering(format:TGstFormat):PGstQuery;cdecl;external;
procedure gst_query_set_buffering_percent(query:PGstQuery; busy:Tgboolean; percent:Tgint);cdecl;external;
procedure gst_query_parse_buffering_percent(query:PGstQuery; busy:Pgboolean; percent:Pgint);cdecl;external;
procedure gst_query_set_buffering_stats(query:PGstQuery; mode:TGstBufferingMode; avg_in:Tgint; avg_out:Tgint; buffering_left:Tgint64);cdecl;external;
procedure gst_query_parse_buffering_stats(query:PGstQuery; mode:PGstBufferingMode; avg_in:Pgint; avg_out:Pgint; buffering_left:Pgint64);cdecl;external;
procedure gst_query_set_buffering_range(query:PGstQuery; format:TGstFormat; start:Tgint64; stop:Tgint64; estimated_total:Tgint64);cdecl;external;
procedure gst_query_parse_buffering_range(query:PGstQuery; format:PGstFormat; start:Pgint64; stop:Pgint64; estimated_total:Pgint64);cdecl;external;
function gst_query_add_buffering_range(query:PGstQuery; start:Tgint64; stop:Tgint64):Tgboolean;cdecl;external;
function gst_query_get_n_buffering_ranges(query:PGstQuery):Tguint;cdecl;external;
function gst_query_parse_nth_buffering_range(query:PGstQuery; index:Tguint; start:Pgint64; stop:Pgint64):Tgboolean;cdecl;external;
{ URI query  }
function gst_query_new_uri:PGstQuery;cdecl;external;
procedure gst_query_parse_uri(query:PGstQuery; uri:PPgchar);cdecl;external;
(* Const before type ignored *)
procedure gst_query_set_uri(query:PGstQuery; uri:Pgchar);cdecl;external;
procedure gst_query_parse_uri_redirection(query:PGstQuery; uri:PPgchar);cdecl;external;
(* Const before type ignored *)
procedure gst_query_set_uri_redirection(query:PGstQuery; uri:Pgchar);cdecl;external;
procedure gst_query_parse_uri_redirection_permanent(query:PGstQuery; permanent:Pgboolean);cdecl;external;
procedure gst_query_set_uri_redirection_permanent(query:PGstQuery; permanent:Tgboolean);cdecl;external;
{ allocation query  }
function gst_query_new_allocation(caps:PGstCaps; need_pool:Tgboolean):PGstQuery;cdecl;external;
procedure gst_query_parse_allocation(query:PGstQuery; caps:PPGstCaps; need_pool:Pgboolean);cdecl;external;
{ pools  }
procedure gst_query_add_allocation_pool(query:PGstQuery; pool:PGstBufferPool; size:Tguint; min_buffers:Tguint; max_buffers:Tguint);cdecl;external;
function gst_query_get_n_allocation_pools(query:PGstQuery):Tguint;cdecl;external;
procedure gst_query_parse_nth_allocation_pool(query:PGstQuery; index:Tguint; pool:PPGstBufferPool; size:Pguint; min_buffers:Pguint; 
            max_buffers:Pguint);cdecl;external;
procedure gst_query_set_nth_allocation_pool(query:PGstQuery; index:Tguint; pool:PGstBufferPool; size:Tguint; min_buffers:Tguint; 
            max_buffers:Tguint);cdecl;external;
procedure gst_query_remove_nth_allocation_pool(query:PGstQuery; index:Tguint);cdecl;external;
{ allocators  }
(* Const before type ignored *)
procedure gst_query_add_allocation_param(query:PGstQuery; allocator:PGstAllocator; params:PGstAllocationParams);cdecl;external;
function gst_query_get_n_allocation_params(query:PGstQuery):Tguint;cdecl;external;
procedure gst_query_parse_nth_allocation_param(query:PGstQuery; index:Tguint; allocator:PPGstAllocator; params:PGstAllocationParams);cdecl;external;
(* Const before type ignored *)
procedure gst_query_set_nth_allocation_param(query:PGstQuery; index:Tguint; allocator:PGstAllocator; params:PGstAllocationParams);cdecl;external;
procedure gst_query_remove_nth_allocation_param(query:PGstQuery; index:Tguint);cdecl;external;
{ metadata  }
(* Const before type ignored *)
procedure gst_query_add_allocation_meta(query:PGstQuery; api:TGType; params:PGstStructure);cdecl;external;
function gst_query_get_n_allocation_metas(query:PGstQuery):Tguint;cdecl;external;
(* Const before type ignored *)
function gst_query_parse_nth_allocation_meta(query:PGstQuery; index:Tguint; params:PPGstStructure):TGType;cdecl;external;
procedure gst_query_remove_nth_allocation_meta(query:PGstQuery; index:Tguint);cdecl;external;
function gst_query_find_allocation_meta(query:PGstQuery; api:TGType; index:Pguint):Tgboolean;cdecl;external;
{ scheduling query  }
{*
 * GstSchedulingFlags:
 * @GST_SCHEDULING_FLAG_SEEKABLE: if seeking is possible
 * @GST_SCHEDULING_FLAG_SEQUENTIAL: if sequential access is recommended
 * @GST_SCHEDULING_FLAG_BANDWIDTH_LIMITED: if bandwidth is limited and buffering possible (since 1.2)
 *
 * The different scheduling flags.
  }
type
  PGstSchedulingFlags = ^TGstSchedulingFlags;
  TGstSchedulingFlags =  Longint;
  Const
    GST_SCHEDULING_FLAG_SEEKABLE = 1 shl 0;
    GST_SCHEDULING_FLAG_SEQUENTIAL = 1 shl 1;
    GST_SCHEDULING_FLAG_BANDWIDTH_LIMITED = 1 shl 2;
;

function gst_query_new_scheduling:PGstQuery;cdecl;external;
procedure gst_query_set_scheduling(query:PGstQuery; flags:TGstSchedulingFlags; minsize:Tgint; maxsize:Tgint; align:Tgint);cdecl;external;
procedure gst_query_parse_scheduling(query:PGstQuery; flags:PGstSchedulingFlags; minsize:Pgint; maxsize:Pgint; align:Pgint);cdecl;external;
procedure gst_query_add_scheduling_mode(query:PGstQuery; mode:TGstPadMode);cdecl;external;
function gst_query_get_n_scheduling_modes(query:PGstQuery):Tguint;cdecl;external;
function gst_query_parse_nth_scheduling_mode(query:PGstQuery; index:Tguint):TGstPadMode;cdecl;external;
function gst_query_has_scheduling_mode(query:PGstQuery; mode:TGstPadMode):Tgboolean;cdecl;external;
function gst_query_has_scheduling_mode_with_flags(query:PGstQuery; mode:TGstPadMode; flags:TGstSchedulingFlags):Tgboolean;cdecl;external;
{ accept-caps query  }
function gst_query_new_accept_caps(caps:PGstCaps):PGstQuery;cdecl;external;
procedure gst_query_parse_accept_caps(query:PGstQuery; caps:PPGstCaps);cdecl;external;
procedure gst_query_set_accept_caps_result(query:PGstQuery; result:Tgboolean);cdecl;external;
procedure gst_query_parse_accept_caps_result(query:PGstQuery; result:Pgboolean);cdecl;external;
{ caps query  }
function gst_query_new_caps(filter:PGstCaps):PGstQuery;cdecl;external;
procedure gst_query_parse_caps(query:PGstQuery; filter:PPGstCaps);cdecl;external;
procedure gst_query_set_caps_result(query:PGstQuery; caps:PGstCaps);cdecl;external;
procedure gst_query_parse_caps_result(query:PGstQuery; caps:PPGstCaps);cdecl;external;
{ drain query  }
function gst_query_new_drain:PGstQuery;cdecl;external;
{ context query  }
(* Const before type ignored *)
function gst_query_new_context(context_type:Pgchar):PGstQuery;cdecl;external;
(* Const before type ignored *)
function gst_query_parse_context_type(query:PGstQuery; context_type:PPgchar):Tgboolean;cdecl;external;
procedure gst_query_set_context(query:PGstQuery; context:PGstContext);cdecl;external;
procedure gst_query_parse_context(query:PGstQuery; context:PPGstContext);cdecl;external;
{ bitrate query  }
function gst_query_new_bitrate:PGstQuery;cdecl;external;
procedure gst_query_set_bitrate(query:PGstQuery; nominal_bitrate:Tguint);cdecl;external;
procedure gst_query_parse_bitrate(query:PGstQuery; nominal_bitrate:Pguint);cdecl;external;
{ selectable query  }
function gst_query_new_selectable:PGstQuery;cdecl;external;
procedure gst_query_set_selectable(query:PGstQuery; selectable:Tgboolean);cdecl;external;
procedure gst_query_parse_selectable(query:PGstQuery; selectable:Pgboolean);cdecl;external;
{//////G_DEFINE_AUTOPTR_CLEANUP_FUNC    (GstQuery, gst_query_unref) }
{$endif}
{ __GST_QUERY_H__  }

implementation

{ was #define dname def_expr }
function GST_QUERY_TYPE_BOTH : TGstQueryTypeFlags;
  begin
    GST_QUERY_TYPE_BOTH:=TGstQueryTypeFlags(GST_QUERY_TYPE_UPSTREAM or GST_QUERY_TYPE_DOWNSTREAM);
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_IS_QUERY(obj : longint) : longint;
begin
  GST_IS_QUERY:=GST_IS_MINI_OBJECT_TYPE(obj,GST_TYPE_QUERY);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_QUERY_CAST(obj : longint) : PGstQuery;
begin
  GST_QUERY_CAST:=PGstQuery(obj);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_QUERY(obj : longint) : longint;
begin
  GST_QUERY:=GST_QUERY_CAST(obj);
end;


end.
